[gd_scene load_steps=12 format=3 uid="uid://cruh7nl4gnr56"]

[ext_resource type="Script" path="res://scenes/game/Game.gd" id="1_h1b5a"]
[ext_resource type="PackedScene" uid="uid://2ak1wb4r1f7g" path="res://maps/TestKenny1Bit.tscn" id="2_34m4d"]
[ext_resource type="Script" path="res://scenes/game/camera.gd" id="3_id2dg"]
[ext_resource type="Script" path="res://scenes/game/SelectionBox.gd" id="4_ghd0c"]
[ext_resource type="PackedScene" uid="uid://c6w63m5cnqer3" path="res://entities/enemies/Boar/Boar.tscn" id="5_1hrv2"]
[ext_resource type="PackedScene" uid="uid://cegild4dp6ou7" path="res://entities/enemies/Santelmo/Santelmo.tscn" id="6_1enpl"]
[ext_resource type="Script" path="res://scenes/game/PlayerEntities.gd" id="6_caxu3"]
[ext_resource type="PackedScene" uid="uid://c0cnqs3d0jrf0" path="res://entities/neutral/Aghoy/Aghoy.tscn" id="6_e66sy"]
[ext_resource type="PackedScene" uid="uid://bg5l5dskd8qgu" path="res://entities/player/Puny/Puny.tscn" id="7_vmpsy"]
[ext_resource type="AudioStream" uid="uid://c6u4yobc614t3" path="res://music/Studio Picalquers - Demo - Sunk.mp3" id="8_j8io2"]
[ext_resource type="PackedScene" uid="uid://dres4qlld7l7n" path="res://entities/enemies/Tiyanak/Tiyanak.tscn" id="11_he1ya"]

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_h1b5a")

[node name="Map" parent="." instance=ExtResource("2_34m4d")]
unique_name_in_owner = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
limit_left = 0
limit_top = 0
limit_right = 512
limit_bottom = 2048
script = ExtResource("3_id2dg")

[node name="SelectionBox" type="Node2D" parent="Camera2D"]
unique_name_in_owner = true
z_index = 666
script = ExtResource("4_ghd0c")
collision_mask = 143132808

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="GameOverScreen" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOverScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.760784)

[node name="Label" type="Label" parent="GameOverScreen/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -30.0
offset_right = 1169.0
offset_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.15, 0.15)
theme_override_font_sizes/font_size = 221
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VictoryScreen" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="VictoryScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.760784)

[node name="Label" type="Label" parent="VictoryScreen/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -30.0
offset_right = 1169.0
offset_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.15, 0.15)
theme_override_font_sizes/font_size = 221
text = "VICTORY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_j8io2")
volume_db = -12.0

[node name="NeutralEntities" type="Node2D" parent="."]

[node name="Aghoy" parent="NeutralEntities" instance=ExtResource("6_e66sy")]
position = Vector2(184, 726)

[node name="Aghoy2" parent="NeutralEntities" instance=ExtResource("6_e66sy")]
position = Vector2(290, 254)

[node name="PlayerEntities" type="Node2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
script = ExtResource("6_caxu3")

[node name="Puny" parent="PlayerEntities" instance=ExtResource("7_vmpsy")]
position = Vector2(158, 1904)

[node name="Puny2" parent="PlayerEntities" instance=ExtResource("7_vmpsy")]
position = Vector2(264, 1796)

[node name="Puny3" parent="PlayerEntities" instance=ExtResource("7_vmpsy")]
position = Vector2(340, 1875)

[node name="Puny4" parent="PlayerEntities" instance=ExtResource("7_vmpsy")]
position = Vector2(155, 1824)

[node name="EnemyEntities" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Boar" parent="EnemyEntities" instance=ExtResource("5_1hrv2")]
position = Vector2(100, 1398)

[node name="Boar2" parent="EnemyEntities" instance=ExtResource("5_1hrv2")]
position = Vector2(364, 1188)

[node name="Boar3" parent="EnemyEntities" instance=ExtResource("5_1hrv2")]
position = Vector2(142, 1180)

[node name="Boar4" parent="EnemyEntities" instance=ExtResource("5_1hrv2")]
position = Vector2(260, 1294)

[node name="Boar5" parent="EnemyEntities" instance=ExtResource("5_1hrv2")]
position = Vector2(358, 1374)

[node name="Boar6" parent="EnemyEntities" instance=ExtResource("5_1hrv2")]
position = Vector2(118, 852)

[node name="Boar7" parent="EnemyEntities" instance=ExtResource("5_1hrv2")]
position = Vector2(348, 876)

[node name="Boar8" parent="EnemyEntities" instance=ExtResource("5_1hrv2")]
position = Vector2(254, 708)

[node name="Boar9" parent="EnemyEntities" instance=ExtResource("5_1hrv2")]
position = Vector2(142, 606)

[node name="Boar10" parent="EnemyEntities" instance=ExtResource("5_1hrv2")]
position = Vector2(372, 650)

[node name="Boar11" parent="EnemyEntities" instance=ExtResource("5_1hrv2")]
position = Vector2(140, 368)

[node name="Boar12" parent="EnemyEntities" instance=ExtResource("5_1hrv2")]
position = Vector2(294, 362)

[node name="Boar13" parent="EnemyEntities" instance=ExtResource("5_1hrv2")]
position = Vector2(224, 206)

[node name="Boar14" parent="EnemyEntities" instance=ExtResource("5_1hrv2")]
position = Vector2(412, 124)

[node name="Boar15" parent="EnemyEntities" instance=ExtResource("5_1hrv2")]
position = Vector2(368, 264)

[node name="Boar16" parent="EnemyEntities" instance=ExtResource("5_1hrv2")]
position = Vector2(128, 106)

[node name="Santelmo" parent="EnemyEntities" instance=ExtResource("6_1enpl")]
position = Vector2(234, 888)

[node name="Santelmo2" parent="EnemyEntities" instance=ExtResource("6_1enpl")]
position = Vector2(132, 724)

[node name="Santelmo3" parent="EnemyEntities" instance=ExtResource("6_1enpl")]
position = Vector2(390, 782)

[node name="Santelmo4" parent="EnemyEntities" instance=ExtResource("6_1enpl")]
position = Vector2(256, 600)

[node name="Santelmo5" parent="EnemyEntities" instance=ExtResource("6_1enpl")]
position = Vector2(244, 788)

[node name="Santelmo6" parent="EnemyEntities" instance=ExtResource("6_1enpl")]
position = Vector2(194, 410)

[node name="Santelmo7" parent="EnemyEntities" instance=ExtResource("6_1enpl")]
position = Vector2(418, 396)

[node name="Santelmo8" parent="EnemyEntities" instance=ExtResource("6_1enpl")]
position = Vector2(90, 246)

[node name="Santelmo9" parent="EnemyEntities" instance=ExtResource("6_1enpl")]
position = Vector2(328, 166)

[node name="Santelmo10" parent="EnemyEntities" instance=ExtResource("6_1enpl")]
position = Vector2(230, 94)

[node name="Tiyanak" parent="EnemyEntities" instance=ExtResource("11_he1ya")]
position = Vector2(84, 434)

[node name="Tiyanak2" parent="EnemyEntities" instance=ExtResource("11_he1ya")]
position = Vector2(302, 400)

[node name="Tiyanak3" parent="EnemyEntities" instance=ExtResource("11_he1ya")]
position = Vector2(198, 290)

[node name="Tiyanak4" parent="EnemyEntities" instance=ExtResource("11_he1ya")]
position = Vector2(132, 148)

[node name="Tiyanak5" parent="EnemyEntities" instance=ExtResource("11_he1ya")]
position = Vector2(356, 70)

[connection signal="timeout" from="Timer" to="." method="spawn_enemy"]
